# FIBIONIC_US-SOLID-Waage

./: .gitignore  20260317_Entwicklungsauftrag_fibionic_Gewichtslogging.docx  Bedienungsanleitung_fibionic_Gewichtslogging.docx  README.md  ReadMe.html  YYYYMMDD_Entwicklungsauftrag_ProjectName.docx  fibionic-gewichtslogging.spec  pyproject.toml  requirements.txt
logo/: fibionic_app_icon.icns
src/fibionic_scale_app/: __init__.py  __main__.py  app.py  excel_writer.py  models.py  parsing.py  runtime_support.py  serial_io.py  settings_store.py  stability.py  weight_precision.py
tests/: test_app_ports.py  test_excel_writer.py  test_parsing.py  test_runtime_support.py  test_scale_sources.py  test_settings_store.py  test_stability.py  test_weight_precision.py
